--- a/index2.html
+++ b/index2.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- saved from url=(0057)file:///Users/apple/zaya_website/zaya_website/index2.html -->
+<!-- saved from url=(0014)about:internet -->
 <html lang="en" class="lenis"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
 
@@ -1499,7 +1499,11 @@
                                     <div class="framer-Hzat5 framer-00MeM framer-68kmee framer-v-68kmee" data-border="true" data-framer-name="Closed" data-highlight="true" style="--border-bottom-width: 1px; --border-color: var(--token-6839e435-35f3-4ab3-b723-e98c27e525bc, rgba(255, 255, 255, 0.1)); --border-left-width: 1px; --border-right-width: 1px; --border-style: solid; --border-top-width: 1px; background-color: var(--token-c9fc1380-5d14-49ab-960e-cc3a53f6f2d0, rgba(255, 255, 255, 0.06)); border-radius: 20px; width: 100%; opacity: 1;" tabindex="0">
                                         <div class="framer-a7zdd9" data-framer-name="Question" style="opacity: 1;">
                                             <div class="framer-kodc4" style="outline: none; display: flex; flex-direction: column; justify-content: flex-start; flex-shrink: 0; --extracted-r6o4lv: var(--token-92a1cea2-6d53-45ff-98da-32c110a8c3fc, rgb(255, 255, 255)); --framer-link-text-color: rgb(0, 153, 255); --framer-link-text-decoration: underline; --framer-paragraph-spacing: 0px; transform: none; opacity: 1;" data-framer-component-type="RichTextContainer">
-                                                <p class="framer-text framer-styles-preset-ygid9r" data-styles-preset="t8V5XlRUU" style="--framer-text-alignment:left;--framer-text-color:var(--extracted-r6o4lv, var(--token-92a1cea2-6d53-45ff-98da-32c110a8c3fc, rgb(255, 255, 255)))">What are AI development services?</p>
+                                                <p class="framer-text framer-styles-preset-ygid9r" data-styles-preset="t8V5XlRUU" style="--framer-text-alignment:left;--framer-text-color:var(--extracted-r6o4lv, var(--token-92a1cea2-6d53-45ff-98da-32c110a8c3fc, rgb(255, 255, 255)))">How fast can I get insights with Zily?</p>
+<div class="faq-answer" style="display: none; padding: 1rem; color: white;">
+  <p>You can launch a study in minutes and get analyzed results within hours. Zily drastically reduces time-to-insight, making it ideal for teams who need to move fast without sacrificing quality. The AI handles transcription, tagging, theme detection, and reporting automatically.</p>
+</div>
+
                                             </div>
                                             <div class="framer-a4ejqy" data-framer-name="Icon Holder" style="opacity: 1;">
                                                 <div class="framer-491k3v-container" style="opacity: 1;">
@@ -1519,7 +1523,11 @@
                                     <div class="framer-Hzat5 framer-00MeM framer-68kmee framer-v-68kmee" data-border="true" data-framer-name="Closed" data-highlight="true" style="--border-bottom-width: 1px; --border-color: var(--token-6839e435-35f3-4ab3-b723-e98c27e525bc, rgba(255, 255, 255, 0.1)); --border-left-width: 1px; --border-right-width: 1px; --border-style: solid; --border-top-width: 1px; background-color: var(--token-c9fc1380-5d14-49ab-960e-cc3a53f6f2d0, rgba(255, 255, 255, 0.06)); border-radius: 20px; width: 100%; opacity: 1;" tabindex="0">
                                         <div class="framer-a7zdd9" data-framer-name="Question" style="opacity: 1;">
                                             <div class="framer-kodc4" style="outline: none; display: flex; flex-direction: column; justify-content: flex-start; flex-shrink: 0; --extracted-r6o4lv: var(--token-92a1cea2-6d53-45ff-98da-32c110a8c3fc, rgb(255, 255, 255)); --framer-link-text-color: rgb(0, 153, 255); --framer-link-text-decoration: underline; --framer-paragraph-spacing: 0px; transform: none; opacity: 1;" data-framer-component-type="RichTextContainer">
-                                                <p class="framer-text framer-styles-preset-ygid9r" data-styles-preset="t8V5XlRUU" style="--framer-text-alignment:left;--framer-text-color:var(--extracted-r6o4lv, var(--token-92a1cea2-6d53-45ff-98da-32c110a8c3fc, rgb(255, 255, 255)))">What types of processes can be automated using AI?</p>
+                                                <p class="framer-text framer-styles-preset-ygid9r" data-styles-preset="t8V5XlRUU" style="--framer-text-alignment:left;--framer-text-color:var(--extracted-r6o4lv, var(--token-92a1cea2-6d53-45ff-98da-32c110a8c3fc, rgb(255, 255, 255)))">Is Zily compliant with data privacy and security regulations?</p>
+<div class="faq-answer" style="display: none; padding: 1rem; color: white;">
+  <p>Absolutely. Zily is built with enterprise-grade security and GDPR compliance in mind. All data is securely stored, with participant consent and anonymization features integrated by default. Our platform meets the standards required by global enterprise clients.</p>
+</div>
+
                                             </div>
                                             <div class="framer-a4ejqy" data-framer-name="Icon Holder" style="opacity: 1;">
                                                 <div class="framer-491k3v-container" style="opacity: 1;">
@@ -1539,7 +1547,11 @@
                                     <div class="framer-Hzat5 framer-00MeM framer-68kmee framer-v-68kmee" data-border="true" data-framer-name="Closed" data-highlight="true" style="--border-bottom-width: 1px; --border-color: var(--token-6839e435-35f3-4ab3-b723-e98c27e525bc, rgba(255, 255, 255, 0.1)); --border-left-width: 1px; --border-right-width: 1px; --border-style: solid; --border-top-width: 1px; background-color: var(--token-c9fc1380-5d14-49ab-960e-cc3a53f6f2d0, rgba(255, 255, 255, 0.06)); border-radius: 20px; width: 100%; opacity: 1;" tabindex="0">
                                         <div class="framer-a7zdd9" data-framer-name="Question" style="opacity: 1;">
                                             <div class="framer-kodc4" style="outline: none; display: flex; flex-direction: column; justify-content: flex-start; flex-shrink: 0; --extracted-r6o4lv: var(--token-92a1cea2-6d53-45ff-98da-32c110a8c3fc, rgb(255, 255, 255)); --framer-link-text-color: rgb(0, 153, 255); --framer-link-text-decoration: underline; --framer-paragraph-spacing: 0px; transform: none; opacity: 1;" data-framer-component-type="RichTextContainer">
-                                                <p class="framer-text framer-styles-preset-ygid9r" data-styles-preset="t8V5XlRUU" style="--framer-text-alignment:left;--framer-text-color:var(--extracted-r6o4lv, var(--token-92a1cea2-6d53-45ff-98da-32c110a8c3fc, rgb(255, 255, 255)))">How long does it take to implement AI automation?</p>
+                                                <p class="framer-text framer-styles-preset-ygid9r" data-styles-preset="t8V5XlRUU" style="--framer-text-alignment:left;--framer-text-color:var(--extracted-r6o4lv, var(--token-92a1cea2-6d53-45ff-98da-32c110a8c3fc, rgb(255, 255, 255)))">Can Zily replace traditional focus groups or interviews?</p>
+<div class="faq-answer" style="display: none; padding: 1rem; color: white;">
+  <p>Yes and go beyond. Zily replaces manual, slow qual research with AI-guided, scalable interviews that deliver faster turnaround and deeper insights. It reduces the need for agencies or long recruitment cycles, while still keeping the depth of in-person interviews.</p>
+</div>
+
                                             </div>
                                             <div class="framer-a4ejqy" data-framer-name="Icon Holder" style="opacity: 1;">
                                                 <div class="framer-491k3v-container" style="opacity: 1;">
@@ -1559,7 +1571,17 @@
                                     <div class="framer-Hzat5 framer-00MeM framer-68kmee framer-v-68kmee" data-border="true" data-framer-name="Closed" data-highlight="true" style="--border-bottom-width: 1px; --border-color: var(--token-6839e435-35f3-4ab3-b723-e98c27e525bc, rgba(255, 255, 255, 0.1)); --border-left-width: 1px; --border-right-width: 1px; --border-style: solid; --border-top-width: 1px; background-color: var(--token-c9fc1380-5d14-49ab-960e-cc3a53f6f2d0, rgba(255, 255, 255, 0.06)); border-radius: 20px; width: 100%; opacity: 1;" tabindex="0">
                                         <div class="framer-a7zdd9" data-framer-name="Question" style="opacity: 1;">
                                             <div class="framer-kodc4" style="outline: none; display: flex; flex-direction: column; justify-content: flex-start; flex-shrink: 0; --extracted-r6o4lv: var(--token-92a1cea2-6d53-45ff-98da-32c110a8c3fc, rgb(255, 255, 255)); --framer-link-text-color: rgb(0, 153, 255); --framer-link-text-decoration: underline; --framer-paragraph-spacing: 0px; transform: none; opacity: 1;" data-framer-component-type="RichTextContainer">
-                                                <p class="framer-text framer-styles-preset-ygid9r" data-styles-preset="t8V5XlRUU" style="--framer-text-alignment:left;--framer-text-color:var(--extracted-r6o4lv, var(--token-92a1cea2-6d53-45ff-98da-32c110a8c3fc, rgb(255, 255, 255)))">Will AI automation disrupt my current operations?</p>
+                                                <p class="framer-text framer-styles-preset-ygid9r" data-styles-preset="t8V5XlRUU" style="--framer-text-alignment:left;--framer-text-color:var(--extracted-r6o4lv, var(--token-92a1cea2-6d53-45ff-98da-32c110a8c3fc, rgb(255, 255, 255)))">Who uses Zily and what are the main use cases?</p>
+<div class="faq-answer" style="display: none; padding: 1rem; color: white;">
+  <p>Zily is used by **insights teams, marketers, product managers, and innovation leads** at enterprise companies. Key use cases include:
+
+- Rapid concept testing
+- Voice-of-customer studies
+- User journey validation
+- Messaging or campaign feedback
+- Exploratory market research</p>
+</div>
+
                                             </div>
                                             <div class="framer-a4ejqy" data-framer-name="Icon Holder" style="opacity: 1;">
                                                 <div class="framer-491k3v-container" style="opacity: 1;">
@@ -1579,7 +1601,11 @@
                                     <div class="framer-Hzat5 framer-00MeM framer-68kmee framer-v-68kmee" data-border="true" data-framer-name="Closed" data-highlight="true" style="--border-bottom-width: 1px; --border-color: var(--token-6839e435-35f3-4ab3-b723-e98c27e525bc, rgba(255, 255, 255, 0.1)); --border-left-width: 1px; --border-right-width: 1px; --border-style: solid; --border-top-width: 1px; background-color: var(--token-c9fc1380-5d14-49ab-960e-cc3a53f6f2d0, rgba(255, 255, 255, 0.06)); border-radius: 20px; width: 100%; opacity: 1;" tabindex="0">
                                         <div class="framer-a7zdd9" data-framer-name="Question" style="opacity: 1;">
                                             <div class="framer-kodc4" style="outline: none; display: flex; flex-direction: column; justify-content: flex-start; flex-shrink: 0; --extracted-r6o4lv: var(--token-92a1cea2-6d53-45ff-98da-32c110a8c3fc, rgb(255, 255, 255)); --framer-link-text-color: rgb(0, 153, 255); --framer-link-text-decoration: underline; --framer-paragraph-spacing: 0px; transform: none; opacity: 1;" data-framer-component-type="RichTextContainer">
-                                                <p class="framer-text framer-styles-preset-ygid9r" data-styles-preset="t8V5XlRUU" style="--framer-text-alignment:left;--framer-text-color:var(--extracted-r6o4lv, var(--token-92a1cea2-6d53-45ff-98da-32c110a8c3fc, rgb(255, 255, 255)))">How much does AI automation cost?</p>
+                                                <p class="framer-text framer-styles-preset-ygid9r" data-styles-preset="t8V5XlRUU" style="--framer-text-alignment:left;--framer-text-color:var(--extracted-r6o4lv, var(--token-92a1cea2-6d53-45ff-98da-32c110a8c3fc, rgb(255, 255, 255)))">How is Conveo different from other qualitative research tools?</p>
+<div class="faq-answer" style="display: none; padding: 1rem; color: white;">
+  <p>Unlike traditional qual platforms or AI copilots,Zily delivers researcher-grade insights at scale. It combines video and voice input with vertical-specific AI models, offering a fully guided workflow from question design to insight synthesis. No avatars, no surveys — just real conversations turned into real insights, fast.</p>
+</div>
+
                                             </div>
                                             <div class="framer-a4ejqy" data-framer-name="Icon Holder" style="opacity: 1;">
                                                 <div class="framer-491k3v-container" style="opacity: 1;">
@@ -1773,4 +1799,21 @@
 
 
 
-</body></html>
+
+
+<script>
+    document.querySelectorAll('.framer-Hzat5').forEach(faq => {
+      faq.addEventListener('click', () => {
+        const answer = faq.querySelector('.faq-answer');
+  
+        // Close other open answers
+        document.querySelectorAll('.faq-answer').forEach(a => {
+          if (a !== answer) a.style.display = 'none';
+        });
+  
+        // Toggle current answer
+        answer.style.display = (answer.style.display === 'none' || !answer.style.display) ? 'block' : 'none';
+      });
+    });
+  </script>
+  </body></html>
