Changes to testetimonials

--- a/index.html
+++ b/index.html
@@ -1295,15 +1295,15 @@
                     <div class="framer-103hlmz-container">
                         <div class="framer-wrnxT framer-1lc8qgd framer-v-1lc8qgd" data-border="true" data-framer-name="Badge" style="--border-bottom-width: 1px; --border-color: var(--token-6839e435-35f3-4ab3-b723-e98c27e525bc, rgba(255, 255, 255, 0.1)); --border-left-width: 1px; --border-right-width: 1px; --border-style: solid; --border-top-width: 1px; background-color: var(--token-729f323b-4a85-474f-8f3a-c5c840127090, rgb(13, 13, 13)); border-radius: 8px; opacity: 1;">
                             <div class="framer-gk8fag" style="outline: none; display: flex; flex-direction: column; justify-content: flex-start; flex-shrink: 0; --extracted-r6o4lv: var(--variable-reference-sVlsQOR6K-BpV_0Y1_B); --framer-link-text-color: rgb(0, 153, 255); --framer-link-text-decoration: underline; --variable-reference-LZ2eCPtLx-BpV_0Y1_B: 14; --variable-reference-sVlsQOR6K-BpV_0Y1_B: var(--token-8c14519b-b926-46e8-8772-9a05cbede172, rgba(255, 255, 255, 0.7)); transform: none; opacity: 1;" data-framer-component-type="RichTextContainer">
-                                <p style="--font-selector:RlM7T3V0Zml0LWxpZ2h0;--framer-font-family:&quot;Outfit&quot;, &quot;Outfit Placeholder&quot;, sans-serif;--framer-font-size:calc(var(--variable-reference-LZ2eCPtLx-BpV_0Y1_B) * 1px);--framer-font-weight:300;--framer-text-alignment:center;--framer-text-color:var(--extracted-r6o4lv, var(--variable-reference-sVlsQOR6K-BpV_0Y1_B))" class="framer-text">Testimonials</p>
+                                <p style="--font-selector:RlM7T3V0Zml0LWxpZ2h0;--framer-font-family:&quot;Outfit&quot;, &quot;Outfit Placeholder&quot;, sans-serif;--framer-font-size:calc(var(--variable-reference-LZ2eCPtLx-BpV_0Y1_B) * 1px);--framer-font-weight:300;--framer-text-alignment:center;--framer-text-color:var(--extracted-r6o4lv, var(--variable-reference-sVlsQOR6K-BpV_0Y1_B))" class="framer-text">Use Cases</p>
                             </div>
                         </div>
                     </div>
                     <div class="framer-2fbt1m" data-framer-name="Text" name="Text">
                         <div class="framer-536vqp" style="outline:none;display:flex;flex-direction:column;justify-content:flex-start;flex-shrink:0;transform:none" data-framer-component-type="RichTextContainer">
-                            <h2 class="framer-text framer-styles-preset-18ujpf8" data-styles-preset="BPAU_pV1z" style="--framer-text-alignment:center">Trusted by satisfied clients</h2></div>
+                            <h2 class="framer-text framer-styles-preset-18ujpf8" data-styles-preset="BPAU_pV1z" style="--framer-text-alignment:center">End-to-end research platform</h2></div>
                         <div class="framer-qdblk0" style="outline:none;display:flex;flex-direction:column;justify-content:flex-start;flex-shrink:0;transform:none" data-framer-component-type="RichTextContainer">
-                            <p class="framer-text framer-styles-preset-ygid9r" data-styles-preset="t8V5XlRUU" style="--framer-text-alignment:center">Discover how we’ve driven growth and innovation.</p>
+                            <p class="framer-text framer-styles-preset-ygid9r" data-styles-preset="t8V5XlRUU" style="--framer-text-alignment:center">Our customers replace surveys, focus groups, and in-depth interviews with Zily’s AI-moderated interviews.</p>
                         </div>
                     </div>
                 </div>
