--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                             <div class="framer-1kx55rp" data-framer-appear-id="1kx55rp" style="outline: none; display: flex; flex-direction: column; justify-content: flex-start; opacity: 1; flex-shrink: 0; will-change: transform; transform: perspective(1200px);" data-framer-component-type="RichTextContainer">
                                 <h1 class="framer-text framer-styles-preset-1hes80e" data-styles-preset="SUOdZ7P00">AI interviews reveal what people want, fast.</h1></div>
                             <div class="framer-14ptijr" data-framer-appear-id="14ptijr" style="outline: none; display: flex; flex-direction: column; justify-content: flex-start; opacity: 1; flex-shrink: 0; will-change: transform; transform: none;" data-framer-component-type="RichTextContainer">
-                                <p class="framer-text framer-styles-preset-ygid9r" data-styles-preset="t8V5XlRUU">Zily conducts interviews, analyzes responses, and delivers actionable insights—with results in hours, not weeks.</p>
+                                <p class="framer-text framer-styles-preset-ygid9r" data-styles-preset="t8V5XlRUU">Zily AI conducts market research interviews, analyzes responses, and delivers actionable insights—with results in 48 hours.</p>
                             </div>
                         </div>
                         <div class="framer-1wviaoo" data-framer-appear-id="1wviaoo" data-framer-name="CTAs" name="CTAs" style="opacity: 1; will-change: transform; transform: none;">
